--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html> 
 <head>
     <script type="text/javascript" src="test.js"></script>
+    <script type="text/javascript" src="step2.js"></script>
 </head>
 
 <body>
