--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <script type="text/javascript" src="test.js"></script>
     <script type="text/javascript" src="step2.js"></script>
+    <script type="text/javascript" src="calc.js"></script>
 </head>
 
 <body>
