--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <script type="text/javascript" src="test.js"></script>
     <script type="text/javascript" src="step.js"></script>
     <script type="text/javascript" src="calc.js"></script>
-    
+    <script type="text/javascript" src="dom.js"></script>
+    <script type="text/javascript" src="dom.js"></script>
 </head>
 
 <body>
@@ -17,9 +18,8 @@
     </form>
 
     <div>
-        <span id="resultat"></span>
+        <input id="resultat">
     </div>
     
-    <script type="text/javascript" src="dom.js"></script>
 </body>
 </html>
