--- a/boot.html
+++ b/boot.html
@@ -1,9 +1,9 @@
 <html>
 
 <head>
-    <script src="jquery-3.2.1.js"></script>
-    <script type="text/javascript" src="j3.3.js"></script>
-    <link rel="stylesheet" href="switch_color.css">
+    <script src="js/jquery-3.2.1.js"></script>
+    <script type="text/javascript" src="js/j3.3.js"></script>
+    <link rel="stylesheet" href="css/switch_color.css">
 </head>
 
 <body>
