--- a/authors.html
+++ b/authors.html
@@ -8,11 +8,12 @@
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/j4.1.js"></script>
     <link rel="stylesheet" href="css/j4.1.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
     <title>Auteurs</title>
 </head>
 
-<body>
-    <h1>TP - CRUD auteurs</h1>
+<body class="component">
+    <h1 class="">TP - CRUD auteurs</h1>
     <div id="liste-auteurs"></div>
 </body>
 
