show and edit author

--- a/authors.html
+++ b/authors.html
@@ -14,6 +14,13 @@
 
 <body class="component">
     <h1 class="">TP - CRUD auteurs</h1>
+    <div id="detail-auteur"></div>
+    <form id="edit" class="align-center">
+        <input type="text" id="nom">
+        <input type="text" id="prenom">
+        <input type="text" id="fonction">
+        <input type="button" id="submit" value="modifier">
+    </form>
     <div id="liste-auteurs"></div>
 </body>
 
