--- a/authors.html
+++ b/authors.html
@@ -19,7 +19,8 @@
         <input type="text" id="nom">
         <input type="text" id="prenom">
         <input type="text" id="fonction">
-        <input type="button" id="submit" value="modifier">
+        <input type="button" id="submit-edit" value="modifier" class="btn btn-warning">
+        <input type="button" id="submit-add" value="ajouter" class="btn btn-success">
     </form>
     <div id="liste-auteurs"></div>
 </body>
