edit author bug fixed

--- a/authors.html
+++ b/authors.html
@@ -19,6 +19,7 @@
         <input type="text" id="nom">
         <input type="text" id="prenom">
         <input type="text" id="fonction">
+        <input type="hidden" id="id-auteur">
         <input type="button" id="submit-edit" value="modifier" class="btn btn-warning">
         <input type="button" id="submit-add" value="ajouter" class="btn btn-success">
     </form>
